<resources>
    <string name="app_name">Winkle</string>
    <string name="secondary_menu_home">Inicio</string>
    <string name="secondary_menu_mi_tienda">Mi tienda</string>
    <string name="secondary_menu_cesta">Cesta</string>
    <string name="secondary_menu_perfil">Perfil</string>
    <string name="text_email">Email</string>
    <string name="text_pass">Contraseña</string>
    <string name="err_email_empty">No puedes dejar el email vacío</string>
    <string name="err_pass_empty">No puedes dejar la contraseña vacía</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_signin">Registrarse</string>
    <string name="text_continue">Continuar</string>
    <string name="text_username">Nombre de usuario</string>
    <string name="text_description">Descripcion</string>
    <string name="text_contact_phone">Teléfono de contacto</string>
    <string name="text_contact_email">Correo de contacto</string>
    <string name="text_create_new_profile">Crear\nNuevo\nPerfil</string>
    <string name="text_create_new_account">Crear\nNueva\nCuenta</string>
    <string name="text_new_email">Nuevo email</string>
    <string name="text_new_pass">Nueva contraseña</string>
    <string name="text_create_account">Crear cuenta</string>
    <string name="text_create_profile">Crear perfil</string>
    <string name="err_username_empty">No puede dejar el nombre de usuario vacío</string>
    <string name="text_exit_to_login">Volver al inicio de sesión</string>
    <string name="text_total" translatable="false">Total</string>
    <string name="text_comprar">Comprar</string>
    <string name="text_price" translatable="false">%1$s€</string>
    <string name="text_view_profile">Ver perfil</string>
    <string name="text_contact_profile">Perfil de contacto</string>
    <string name="text_add_to_cart">Añadir a la cesta</string>
    <string name="text_disable_product_next_sale">Desactivar producto en la proxima venta</string>
    <string name="text_product_info">Información de producto</string>
    <string name="text_count_product_shoplist">Actualmente tienes este producto %1$d veces en la cesta</string>
    <string name="text_counter_product" translatable="false">x%1$d</string>
    <string name="text_reported">Reportado</string>
    <string name="text_report">Reportar</string>
    <string name="text_title_report">Motivo del reporte</string>
    <string name="text_send_report">Enviar reporte</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_favourite">%1$d/%2$d\nPuntuar</string>
    <string name="text_especial">Especial</string>
    <string name="text_accesorios">Accesorios</string>
    <string name="text_tecnologia">Tecnología</string>
    <string name="text_servicio">Servicio</string>
    <string name="text_estudios">Estudios</string>
    <string name="text_juegos">Juegos</string>
    <string name="text_ropamujer">Ropa mujer</string>
    <string name="text_ropahombre">Ropa Hombre</string>
    <string name="text_hogar">Hogar</string>
    <string name="text_otros">Otros</string>
    <string name="text_insert_name">Insertar nombre</string>
    <string name="text_insert_price">Insertar precio</string>
    <string name="text_insert_description">Insertar descripcion</string>
    <string name="text_product_photos">Fotos del producto</string>
    <string name="text_categories">Categorías</string>
    <string name="text_tags">Etiquetas (separados por coma)</string>
    <string name="text_active_product">Producto activo</string>
    <string name="text_sign_product">Registrar producto</string>
</resources>
