<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signin2.SignIn2Fragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_wallpaper" />

    <TextView
        android:id="@+id/title"
        style="@style/Screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/img_winkle_logo"
        android:text="@string/text_create_new_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="@id/edit_username_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_background"
        android:text="@string/text_create_profile"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btn_exit_to_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_description_layout"
        style="@style/MyEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="start|top"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/btn_create_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:hint="@string/text_description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_contact_phone_layout"
        style="@style/MyEditText.Full"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/edit_description_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_contact_phone"
            android:inputType="phone"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_contact_email_layout"
        style="@style/MyEditText.Full"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/edit_contact_phone_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_contact_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_contact_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_username_layout"
        style="@style/MyEditText.Full"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/edit_contact_email_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_username"
            android:inputType="textPersonName"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/btn_exit_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@android:color/transparent"
        android:drawableStart="@drawable/ic_exit"
        android:drawablePadding="15dp"
        android:drawableTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/text_exit_to_login"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>