<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.productdetails.ProductDetailsFragment"
    >

    <ScrollView
        android:id="@+id/scroll_product_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="20dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_detail_images"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="65dp"
                tools:itemCount="1"
                tools:listitem="@layout/product_detail_image_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.92"
                app:layout_constraintTop_toBottomOf="@id/product_detail_images"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/top_rounded_background"
                >

                <View
                    android:id="@+id/content_ver_position"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/content_ver_position"
                    app:layout_constraintVertical_bias="0"
                    tools:text="Portatil MSI i7 16RAM RTX 2070" />

                <TextView
                    android:id="@+id/product_detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/product_detail_name"
                    app:layout_constraintLeft_toRightOf="@id/content_ver_position"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/product_detail_name"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintVertical_bias="0"
                    android:layout_marginEnd="15dp"
                    tools:text="20.6€" />

                <TextView
                    android:id="@+id/product_detail_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/product_detail_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_detail_name"
                    app:layout_constraintVertical_bias="0"
                    tools:text="Descripcion" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/product_detail_profile_image"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="6dp"
                    app:layout_constraintLeft_toLeftOf="@id/product_detail_description"
                    app:layout_constraintTop_toBottomOf="@id/product_detail_description"
                    tools:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/product_detail_profile_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/product_detail_profile_image"
                    app:layout_constraintLeft_toRightOf="@id/product_detail_profile_image"
                    app:layout_constraintRight_toLeftOf="@id/product_detail_profile_viewprofile"
                    app:layout_constraintTop_toTopOf="@id/product_detail_profile_image"
                    tools:text="Ismael González" />

                <Button
                    android:id="@+id/product_detail_profile_viewprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/text_view_profile"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="@id/product_detail_profile_name"
                    app:layout_constraintRight_toRightOf="@id/product_detail_price"
                    app:layout_constraintTop_toTopOf="@id/product_detail_profile_name" />

                <Button
                    android:id="@+id/product_detail_add_to_shoplist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_background"
                    android:text="@string/text_add_to_cart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/product_detail_description"
                    app:layout_constraintRight_toRightOf="@id/product_detail_price"
                    app:layout_constraintTop_toBottomOf="@id/product_detail_profile_viewprofile"
                    app:layout_constraintVertical_bias="0" />

                <TextView
                    android:id="@+id/product_detail_count_shoplist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_detail_add_to_shoplist"
                    app:layout_constraintVertical_bias="0"
                    tools:text="@string/text_count_product_shoplist" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/product_detail_back_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.45"
        android:background="@android:color/black"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/product_detail_bigimage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.6"
        android:background="@android:color/white"
        android:elevation="6dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        tools:src="@drawable/googleg_standard_color_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>